# gpsdo-fw

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: gps.c  gps.h  main.c  menu.c  menu.h
